// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bench parser sanity tests > simple > new 1`] = `
"<template>
<div> { ___VERTER___ctx.foo } </div>
</template>
<script lang="ts">
</script>"
`;

exports[`bench parser sanity tests > simple > old 1`] = `
"import 'vue/jsx';
  // import { defineComponent as ___VERTER___defineComponent, ShallowUnwrapRef as ___VERTER___ShallowUnwrapRef } from "vue";
  import { renderList as ___VERTER___renderList,normalizeClass as ___VERTER___normalizeClass,normalizeStyle as ___VERTER___normalizeStyle,defineComponent as ___VERTER___defineComponent,type ShallowUnwrapRef as ___VERTER___ShallowUnwrapRef,type GlobalComponents as ___VERTER___GlobalComponents,type ComponentPublicInstance as ___VERTER___ComponentPublicInstance,type Ref as ___VERTER___Ref,type IntrinsicElementAttributes as ___VERTER___IntrinsicElementAttributes,type Component as ___VERTER___VueComponent } from "vue";
  import { ___VERTER___default } from "test.options.ts";
  
  import type {Suspense as ___VERTER___Suspense,KeepAlive as ___VERTER___KeepAlive,Transition as ___VERTER___Transition,TransitionGroup as ___VERTER___TransitionGroup,Teleport as ___VERTER___Teleport } from "vue";
declare module 'vue' {
    interface GlobalComponents {
  Suspense: typeof ___VERTER___Suspense;
KeepAlive: typeof ___VERTER___KeepAlive;
Transition: typeof ___VERTER___Transition;
TransitionGroup: typeof ___VERTER___TransitionGroup;
Teleport: typeof ___VERTER___Teleport;
    }
  
    interface HTMLAttributes {
      'v-slot'?: {
        default: () => JSX.Element
      }
    }
  }
  
  // patching elements
  declare global {
    namespace JSX {
      export interface IntrinsicClassAttributes<T> {
        'v-slot'?: (T extends { $slots: infer S } ? S : undefined) | ((c: T) => T extends { $slots: infer S } ? S : undefined)
      }
    }
  }
    
  declare function ___VERTER_renderSlot<T extends Array<any>>(slot: (...args: T) => any, cb: (...cb: T) => any): void;
  declare function ___VERTER___template(): JSX.Element;
  
  type ___VERTER___OmitNever<T> = {
      [K in keyof T as T[K] extends never ? never : K]: T[K];
  };
  
  type ___VERTER___ExtractComponent<T> = T extends ___VERTER___Ref<infer V>
    ? ___VERTER___ExtractComponent<V>
    : T extends ___VERTER___VueComponent<infer Props>
    ? T & { new(): { $props: Props & import('vue').VNode['props'] } }
    : T extends keyof ___VERTER___IntrinsicElementAttributes
    ? { new (): { $props: ___VERTER___IntrinsicElementAttributes[T] } }
    : never;
  
  type ___VERTER___ExtractRenderComponents<T> = ___VERTER___OmitNever<{
    [K in keyof Omit<T, keyof ___VERTER___ComponentPublicInstance>]: ___VERTER___ExtractComponent<T[K]>;
  }> & ___VERTER___GlobalComponents & {};
  
  

  declare function ___VERTER___isConstructor<T extends { new(): Record<string, any> }>(o: T | unknown): true;
  type ___VERTER___UnionToIntersection<U> =
    (U extends any ? (x: U) => void : never) extends ((x: infer I) => void) ? I : never;
  declare function ___VERTER___ExtractInstance<T>(o: T): T extends { new(): infer P } ? P : never;
  
  // Helper to retrieve slots definitions
  declare function ___VERTER_extract_Slots<CompSlots>(comp: { new(): { $slots: CompSlots } }, slots?: undefined): CompSlots;
  declare function ___VERTER_extract_Slots<CompSlots, Slots extends Record<string, any> = {}>(comp: { new(): { $slots: CompSlots } }, slots: Slots): Slots;
  
  declare function ___VERTER___SLOT_CALLBACK<T>(slot?: (...args: T[]) => any): (cb: ((...args: T[]) => any))=>void;
  declare function ___VERTER___eventCb<TArgs extends Array<any>, R extends ($event: TArgs[0],) => any>(event: TArgs, cb: R): R;
  declare function ___VERTER___AssertAny<T>(o: T): T extends T & 0 ? never : T;
  declare function ___VERTER___SLOT_TO_COMPONENT<T>(o: T): T extends T & 0 ? never : [T] extends [{ [K in string]: {} }] ? (arg: T) => JSX.Element : [T] extends [(...args: infer A) => any] ? (scope: A[0]) => JSX.Element : T;
  
export function ___VERTER___Render() {

  const ___VERTER___Options = ___VERTER___default;
  const ___VERTER___Component = ___VERTER___ExtractInstance(___VERTER___Options)
  
  const ___VERTER___ctx = {
      ...___VERTER___Component,
      // TODO handle components
  }
  
  const ___VERTER___ctx.$slots = ___VERTER___Component.$slots;
  
  const ___VERTER___comp =  {
    // ...({} as { [K in keyof JSX.IntrinsicElements]: { new(): { $props: JSX.IntrinsicElements[K] } } }),
    ...({} as ___VERTER___ExtractRenderComponents<typeof ___VERTER___ctx>),
    // ...({} as ___VERTER___GlobalComponents),
    // ...___VERTER___ctx
  }
  
return <>

<div> { ___VERTER___ctx.foo } </div>

</>
}

"
`;

exports[`bench parser sanity tests > test file > new 1`] = `
"<script setup lang="ts">
const props = defineProps<{
  item: Contact;
}>();
const { i18n, $ts: ts } = useI18n();

// TODO handle expanded
// when expanded it will show all the extra phones and such
</script>

<template>
  <tabled-content>
    {()=>{if(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company){<tabled-content-row
      
      label={\`\${___VERTER___ctx.i18n.contact.form.info.company.label} / \${___VERTER___ctx.i18n.contact.form.info.companyTitle.label}\`}
      value={___VERTER___ctx.item.company}
    >
      <div class="flex">
        <contact-display value={___VERTER___ctx.item.company} /> {"/"}
        { ___VERTER___ctx.item.companyTitle || "none" }
      </div>
    </tabled-content-row>}}}

    <tabled-content-row v-slot={(___VERTER___slotInstance)=>{
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.label)(()=>{<template>
        <span>{ ___VERTER___ctx.i18n.contact.form.info.phones.label }</span>
        {()=>{if(___VERTER___ctx.item.phones.length > 1){<h-pill >
          { ___VERTER___ctx.ts("contact.form.info.phones.more", [___VERTER___ctx.item.phones.length - 1]) }
        </h-pill>}}}
      </template>});
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.default)(({ value, type })=>{<template>
        {()=>{if(value){<div >
          <a href={\`tel:\${value}\`}> { value }</a> <span> {"("}{ type }{")"}</span>
        </div>}
        else{<span >{"—"}</span>}}}
      </template>});
    }} value={___VERTER___ctx.item.phones.find((x) => x.primary)}></tabled-content-row>

    <tabled-content-row v-slot={(___VERTER___slotInstance)=>{
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.label)(()=>{<template>
        <span>{ ___VERTER___ctx.i18n.contact.form.info.emails.label }</span>
        {()=>{if(___VERTER___ctx.item.emails.length > 1){<h-pill >
          { ___VERTER___ctx.ts("contact.form.info.emails.more", [___VERTER___ctx.item.emails.length - 1]) }
        </h-pill>}}}
      </template>});
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.default)(({ value, type })=>{<template>
        <a href={\`mailto:\${value}\`}> { value }</a>
        <span> {"("}{ type }{")"}</span>
      </template>});
    }} value={___VERTER___ctx.item.emails.find((x) => x.primary)}></tabled-content-row>

    <tabled-content-row v-slot={(___VERTER___slotInstance)=>{
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.label)(()=>{<template>
        <span>{ ___VERTER___ctx.i18n.contact.form.info.websites.label }</span>
        {()=>{if(___VERTER___ctx.item.websites.length > 1){<h-pill >
          {
            ___VERTER___ctx.ts("contact.form.info.websites.more", [___VERTER___ctx.item.websites.length - 1])
          }
        </h-pill>}}}
      </template>});
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.default)(({ value, type })=>{<template>
        <a href={value} target={"_bank"}>
          <span>{ value }</span>
          <h-icon class="mx-1 inline-block" icon={"ic:round-launch"} />
        </a>
        <span> {"("}{ type }{")"}</span>
      </template>});
    }} value={___VERTER___ctx.item.websites.find((x) => x.primary)}></tabled-content-row>

    <tabled-content-row v-slot={(___VERTER___slotInstance)=>{
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.label)(()=>{<template>
        <span>{ ___VERTER___ctx.i18n.contact.form.info.addresses.label }</span>
        {()=>{if(___VERTER___ctx.item.addresses.length > 1){<h-pill >
          {
            ___VERTER___ctx.ts("contact.form.info.addresses.more", [___VERTER___ctx.item.addresses.length - 1])
          }
        </h-pill>}}}
      </template>});
       ___VERTER___slotRender(___VERTER___slotInstance.$slots.default)((address)=>{<template>
        <div class="relative pr-8">
          <p class="font-semibold text-gray-500">{ address.type }</p>
          <p class="whitespace-pre-wrap">{ address.street }</p>
          <p>{ address.postCode }</p>
          <p>{ address.country }</p>

          <div class="absolute right-0 top-0">
            <button>
              <h-icon icon={"ic:round-copy-all"} />
              /* TODO copy to clipboard */
            </button>
            <a
              target={"_blank"}
              href={\`http://maps.google.com/?q=\${[
                address.street,
                address.postCode,
                address.country,
              ]
                .filter(___VERTER___ctx.Boolean)
                .join(', ')}\`}
            >
              /* TODO open google maps */
              <h-icon icon={"ic:round-map"} />
            </a>
          </div>
        </div>

        /* <a :href="value" target="_bank">
            <span>{{ value }}</span>
            <h-icon icon="ic:round-launch" />
          </a>
          ({{ type }}) */
      </template>});
    }} value={___VERTER___ctx.item.addresses.find((x) => x.primary)}></tabled-content-row>
    /* TODO others */
  </tabled-content>
</template>
"
`;

exports[`bench parser sanity tests > test file > old 1`] = `
"
  import 'vue/jsx';
  import { renderList as ___VERTER___renderList,normalizeClass as ___VERTER___normalizeClass,normalizeStyle as ___VERTER___normalizeStyle,defineComponent as ___VERTER___defineComponent,type ShallowUnwrapRef as ___VERTER___ShallowUnwrapRef,type GlobalComponents as ___VERTER___GlobalComponents,type ComponentPublicInstance as ___VERTER___ComponentPublicInstance,type Ref as ___VERTER___Ref,type IntrinsicElementAttributes as ___VERTER___IntrinsicElementAttributes,type Component as ___VERTER___VueComponent } from "vue";
  import { ___VERTER___BindingContext, ___VERTER___FullContext, ___VERTER___default, ___VERTER___resolveSlots, ___VERTER___resolveRenderProps, ___VERTER___resolveEmits} from "test.options.ts";
  
  import type {Suspense as ___VERTER___Suspense,KeepAlive as ___VERTER___KeepAlive,Transition as ___VERTER___Transition,TransitionGroup as ___VERTER___TransitionGroup,Teleport as ___VERTER___Teleport } from "vue";
declare module 'vue' {
    interface GlobalComponents {
  Suspense: typeof ___VERTER___Suspense;
KeepAlive: typeof ___VERTER___KeepAlive;
Transition: typeof ___VERTER___Transition;
TransitionGroup: typeof ___VERTER___TransitionGroup;
Teleport: typeof ___VERTER___Teleport;
    }
  
    interface HTMLAttributes {
      'v-slot'?: {
        default: () => JSX.Element
      }
    }
  }
  
  // patching elements
  declare global {
    namespace JSX {
      export interface IntrinsicClassAttributes<T> {
        'v-slot'?: (T extends { $slots: infer S } ? S : undefined) | ((c: T) => T extends { $slots: infer S } ? S : undefined)
      }
    }
  }
    
  declare function ___VERTER_renderSlot<T extends Array<any>>(slot: (...args: T) => any, cb: (...cb: T) => any): void;
  declare function ___VERTER___template(): JSX.Element;
  
  type ___VERTER___OmitNever<T> = {
      [K in keyof T as T[K] extends never ? never : K]: T[K];
  };
  
  type ___VERTER___ExtractComponent<T> = T extends ___VERTER___Ref<infer V>
    ? ___VERTER___ExtractComponent<V>
    : T extends ___VERTER___VueComponent<infer Props>
    ? T & { new(): { $props: Props & import('vue').VNode['props'] } }
    : T extends keyof ___VERTER___IntrinsicElementAttributes
    ? { new (): { $props: ___VERTER___IntrinsicElementAttributes[T] } }
    : never;
  
  type ___VERTER___ExtractRenderComponents<T> = ___VERTER___OmitNever<{
    [K in keyof Omit<T, keyof ___VERTER___ComponentPublicInstance>]: ___VERTER___ExtractComponent<T[K]>;
  }> & ___VERTER___GlobalComponents & {};
  
  

        
  // Helper to retrieve slots definitions
  declare function ___VERTER_extract_Slots<CompSlots>(comp: { new(): { $slots: CompSlots } }, slots?: undefined): CompSlots;
  declare function ___VERTER_extract_Slots<CompSlots, Slots extends Record<string, any> = {}>(comp: { new(): { $slots: CompSlots } }, slots: Slots): Slots;
  
  declare function ___VERTER___SLOT_CALLBACK<T>(slot?: (...args: T[]) => any): (cb: ((...args: T[]) => any))=>void;
  declare function ___VERTER___eventCb<TArgs extends Array<any>, R extends ($event: TArgs[0],) => any>(event: TArgs, cb: R): R;
  declare function ___VERTER___AssertAny<T>(o: T): T extends T & 0 ? never : T;
  declare function ___VERTER___SLOT_TO_COMPONENT<T>(o: T): T extends T & 0 ? never : [T] extends [{ [K in string]: {} }] ? (arg: T) => JSX.Element : [T] extends [(...args: infer A) => any] ? (scope: A[0]) => JSX.Element : T;
  




// TODO handle expanded
// when expanded it will show all the extra phones and such


export function ___VERTER___Render() {

  const ___VERTER___Component = new ___VERTER___default()
  const ___VERTER___BindingContextCTX = ___VERTER___BindingContext();
  const ___VERTER___FullContextCTX = ___VERTER___FullContext();
  
  const ___VERTER___resolveRenderPropsCTX = ___VERTER___resolveRenderProps();
  
  const ___VERTER___resolveEmitsCTX = ___VERTER___resolveEmits();
  
  const ___VERTER___ctx = {
      ...___VERTER___Component,
      
  
  
      // expose props access directly
      ...({} as Omit<typeof ___VERTER___resolveRenderPropsCTX, keyof typeof ___VERTER___BindingContextCTX>),
  
  
     ...({} as ___VERTER___ShallowUnwrapRef<Omit<typeof ___VERTER___FullContextCTX, "___VERTER___props" | "___VERTER___withDefaultsProps" | "___VERTER___emits" | "___VERTER___slots" | "___VERTER___models">>),
      ...({} as ___VERTER___ShallowUnwrapRef<Omit<typeof ___VERTER___BindingContextCTX, "___VERTER___props" | "___VERTER___withDefaultsProps" | "___VERTER___emits" | "___VERTER___slots" | "___VERTER___models">>),
  
          
     
  
      $props: { ...___VERTER___Component.$props, ...___VERTER___resolveRenderPropsCTX },
      $emit: ___VERTER___resolveEmitsCTX,
      $slots: ___VERTER___resolveSlots(),
  };
  
  
  
  const ___VERTER___comp =  {
    // ...({} as { [K in keyof JSX.IntrinsicElements]: { new(): { $props: JSX.IntrinsicElements[K] } } }),
    ...({} as ___VERTER___ExtractRenderComponents<typeof ___VERTER___ctx>),
    // ...({} as ___VERTER___GlobalComponents),
    // ...___VERTER___ctx
  }
  
return <>

  <___VERTER___comp.TabledContent v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.default)(()=>{ <>

{ (): any => {if(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company){<___VERTER___comp.TabledContentRow
      
      label={\`\${___VERTER___ctx.i18n.contact.form.info.company.label} / \${___VERTER___ctx.i18n.contact.form.info.companyTitle.label}\`}
      value={___VERTER___ctx.item.company}
     v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.default)(()=>{ <>
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } 
<div class="flex">
        <___VERTER___comp.ContactDisplay value={___VERTER___ctx.item.company} />{ "/" }{ ___VERTER___ctx.item.companyTitle || "none" }
      </div>
</>})}

}}>
      
    </___VERTER___comp.TabledContentRow>}}}

    <___VERTER___comp.TabledContentRow value={___VERTER___ctx.item.phones.find((x) => !___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company ? undefined : x.primary)} v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.label)(()=>{<>
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } 
<___VERTER___template >
        <span>{ ___VERTER___ctx.i18n.contact.form.info.phones.label }</span>
        { (): any => {if(___VERTER___ctx.item.phones.length > 1){ v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.default)(()=>{ <>
if(!(___VERTER___ctx.item.phones.length > 1)) { return; } 
<___VERTER___comp.HPill { ___VERTER___ctx.ts("contact.form.info.phones.more", [___VERTER___ctx.item.phones.length - 1]) }
</>})}

}}>
          
        </___VERTER___comp.HPill>}}}
      </___VERTER___template>
</>})}

{___VERTER___SLOT_CALLBACK($slots.default)(({ value, type })=>{ <> 
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } <___VERTER___template >
        { (): any => {if(___VERTER___ctx.value){<div >
          <a href={\`tel:\${___VERTER___ctx.value}\`}> { ___VERTER___ctx.value }</a> <span>{ "(" }{ ___VERTER___ctx.type }{ ")" }</span>
        </div>}
        else{
<span >{ "—" }</span>
}}}
      </___VERTER___template>
</>})}

}}>
      
      
    </___VERTER___comp.TabledContentRow>

    <___VERTER___comp.TabledContentRow value={___VERTER___ctx.item.emails.find((x) => !___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company ? undefined : x.primary)} v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.label)(()=>{<>
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } 
<___VERTER___template >
        <span>{ ___VERTER___ctx.i18n.contact.form.info.emails.label }</span>
        { (): any => {if(___VERTER___ctx.item.emails.length > 1){ v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.default)(()=>{ <>
if(!(___VERTER___ctx.item.emails.length > 1)) { return; } 
<___VERTER___comp.HPill { ___VERTER___ctx.ts("contact.form.info.emails.more", [___VERTER___ctx.item.emails.length - 1]) }
</>})}

}}>
          
        </___VERTER___comp.HPill>}}}
      </___VERTER___template>
</>})}

{___VERTER___SLOT_CALLBACK($slots.default)(({ value, type })=>{ <> 
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } <___VERTER___template >
        <a href={\`mailto:\${___VERTER___ctx.value}\`}> { ___VERTER___ctx.value }</a>
        <span>{ "(" }{ ___VERTER___ctx.type }{ ")" }</span>
      </___VERTER___template>
</>})}

}}>
      
      
    </___VERTER___comp.TabledContentRow>

    <___VERTER___comp.TabledContentRow value={___VERTER___ctx.item.websites.find((x) => !___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company ? undefined : x.primary)} v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.label)(()=>{<>
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } 
<___VERTER___template >
        <span>{ ___VERTER___ctx.i18n.contact.form.info.websites.label }</span>
        { (): any => {if(___VERTER___ctx.item.websites.length > 1){ v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.default)(()=>{ <>
if(!(___VERTER___ctx.item.websites.length > 1)) { return; } 
<___VERTER___comp.HPill {
            ___VERTER___ctx.ts("contact.form.info.websites.more", [___VERTER___ctx.item.websites.length - 1])
          }
</>})}

}}>
          
        </___VERTER___comp.HPill>}}}
      </___VERTER___template>
</>})}

{___VERTER___SLOT_CALLBACK($slots.default)(({ value, type })=>{ <> 
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } <___VERTER___template >
        <a href={___VERTER___ctx.value} target="_bank">
          <span>{ ___VERTER___ctx.value }</span>
          <___VERTER___comp.HIcon class="mx-1 inline-block" icon="ic:round-launch" />
        </a>
        <span>{ "(" }{ ___VERTER___ctx.type }{ ")" }</span>
      </___VERTER___template>
</>})}

}}>
      
      
    </___VERTER___comp.TabledContentRow>

    <___VERTER___comp.TabledContentRow value={___VERTER___ctx.item.addresses.find((x) => !___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company ? undefined : x.primary)} v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.label)(()=>{<>
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } 
<___VERTER___template >
        <span>{ ___VERTER___ctx.i18n.contact.form.info.addresses.label }</span>
        { (): any => {if(___VERTER___ctx.item.addresses.length > 1){ v-slot={(___VERTER___componentInstance): any=>{
const $slots = ___VERTER___componentInstance.$slots;
{___VERTER___SLOT_CALLBACK($slots.default)(()=>{ <>
if(!(___VERTER___ctx.item.addresses.length > 1)) { return; } 
<___VERTER___comp.HPill {
            ___VERTER___ctx.ts("contact.form.info.addresses.more", [___VERTER___ctx.item.addresses.length - 1])
          }
</>})}

}}>
          
        </___VERTER___comp.HPill>}}}
      </___VERTER___template>
</>})}

{___VERTER___SLOT_CALLBACK($slots.default)((address)=>{ <> 
if(!(!___VERTER___ctx.item.isCompany && ___VERTER___ctx.item.company)) { return; } <___VERTER___template >
        <div class="relative pr-8">
          <p class="font-semibold text-gray-500">{ ___VERTER___ctx.address.type }</p>
          <p class="whitespace-pre-wrap">{ ___VERTER___ctx.address.street }</p>
          <p>{ ___VERTER___ctx.address.postCode }</p>
          <p>{ ___VERTER___ctx.address.country }</p>

          <div class="absolute right-0 top-0">
            <button>
              <___VERTER___comp.HIcon icon="ic:round-copy-all" />
              {/* TODO copy to clipboard */}
            </button>
            <a
              target="_blank"
              href={\`http://maps.google.com/?q=\${[
                ___VERTER___ctx.address.street,
                ___VERTER___ctx.address.postCode,
                ___VERTER___ctx.address.country,
              ]
                .filter(Boolean)
                .join(', ')}\`}
            >
              {/* TODO open google maps */}
              <___VERTER___comp.HIcon icon="ic:round-map" />
            </a>
          </div>
        </div>

        {/* <a :href="value" target="_bank">
            <span>{{ value }}</span>
            <h-icon icon="ic:round-launch" />
          </a>
          ({{ type }}) */}
      </___VERTER___template>
</>})}

}}>
      
      
    </___VERTER___comp.TabledContentRow>
    {/* TODO others */}
</>})}

}}>
    
  </___VERTER___comp.TabledContent>

</>
}
"
`;
